[gd_scene load_steps=4 format=3 uid="uid://bj0g4qj3mcc8c"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_uxt2i"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_a133h"]
radius = 0.4

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_ikgcm"]
radius = 0.4
height = 1.4

[node name="Player" type="CharacterBody3D"]
script = ExtResource("1_uxt2i")
walking_speed = 2.0
sprinting_speed = 4.0
crouching_speed = 1.0
mouse_sens = 0.002

[node name="StandingShape" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_a133h")

[node name="CrouchingShape" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.289112, 0)
shape = SubResource("CapsuleShape3D_ikgcm")
disabled = true

[node name="Head" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.7, 0)

[node name="Camera3D" type="Camera3D" parent="Head"]
fov = 56.2243

[node name="PointRay" type="RayCast3D" parent="Head"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.485208)
target_position = Vector3(0, 0, -1)
collision_mask = 4

[node name="hand" type="Node3D" parent="Head"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.2, -0.7, -0.7)

[node name="OmniLight3D" type="OmniLight3D" parent="."]
light_color = Color(0.698039, 0.639216, 0.454902, 1)
light_energy = 0.515

[node name="StandingRay" type="RayCast3D" parent="."]
target_position = Vector3(0, 1, 0)
